# claude-dreams-mcp

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  roadmap.md
docs/research/: 01-chiaki-ng-virtual-controller.md  02-psmoveservice-monado-linux.md  03-godot-openxr-monado.md  04-multi-model-cost.md  05-wayland-capture.md  06-3d-tool-mcp-prior-art.md  07-dreams-knowledge-sources.md
scripts/: test_gamepad.py
src/claude_dreams_mcp/: capture.py  gamepad.py  motion.py  server.py
