[project]
name = "claude-dreams-mcp"
version = "0.0.1"
description = "MCP server exposing Dreams Create-mode controls via virtual DualSense + Wayland screen capture."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "evdev>=1.7.0",
    "Pillow>=10.0.0",
]

[project.scripts]
claude-dreams-mcp = "claude_dreams_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_dreams_mcp"]
